⚙chore(menu) persist size; fix collapsed size

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -19,7 +19,6 @@
 
 
     &.collapsed {
-        width: 56px;
 
         .shortcut,
         .item .label {
